# whisper_ggml

./: CHANGELOG.md  README.md  build.yaml  pubspec.yaml
android/: build.gradle  consumer-rules.pro
android/src/whisper/: CMakeLists.txt  main.cpp  main.h
android/src/whisper/whisper.cpp/ggml/src/ggml-cpu/arch/x86/: repack.cpp
example/: .metadata
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner/: DebugProfile.entitlements
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc
ios/: whisper_ggml.podspec
ios/Classes/: whisper_flutter_plus.cpp
ios/Classes/whisper/ggml/src/ggml-cpu/arch/arm/: cpu-feats.cpp
ios/Classes/whisper/ggml/src/ggml-cpu/arch/x86/: cpu-feats.cpp
lib/: whisper_ggml.dart
lib/src/: whisper.dart  whisper_audio_convert.dart  whisper_controller.dart  whisper_live.dart
lib/src/models/: whisper_model.dart
lib/src/models/requests/: transcribe_request.dart  transcribe_request.freezed.dart  transcribe_request_dto.dart  transcribe_request_dto.freezed.dart  transcribe_request_dto.g.dart
lib/src/models/responses/: whisper_transcribe_segment.dart  whisper_transcribe_segment.freezed.dart  whisper_transcribe_segment.g.dart
linux/: CMakeLists.txt
macos/: whisper_ggml.podspec
macos/Classes/: whisper_ggml.cpp
macos/Classes/whisper/ggml/src/ggml-cpu/arch/arm/: quants.c  repack.cpp
macos/Classes/whisper/ggml/src/ggml-cpu/arch/x86/: quants.c
test/: diarize_test.dart  transcribe_request_dto_test.dart
windows/: CMakeLists.txt
